# gmail-mcp-agent

./: .gitignore  README.md  auth.py  pyproject.toml
src/: gmail_server.py  main.py
